--- a/Quiz_Web/index.html
+++ b/Quiz_Web/index.html
@@ -7,16 +7,15 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    
     <div class="quiz-container">
         <h1>General Knowledge Quiz</h1>
         <div class="timer">Time left: 10 seconds</div>
-        <h2 class="question">Who wrote the novel 'Pride and Prejudice'?</h2>
+        <h2 class="question"></h2>
         <div class="options">
-            <button class="option  correct">Jane Austen</button>
+            <!-- <button class="option  incorrect">Jane Austen</button>
             <button class="option">Emily Bronte</button>
             <button class="option">Charlot Bronte</button>
-            <button class="option">Herman Melville</button>
+            <button class="option">Herman Melville</button> -->
         </div>
         <button class="next-btn">Next</button>
     </div>
@@ -26,7 +25,7 @@
         <div class="question-container incorrect">
             <div class="question">Who wrote the novel 'Pride and Prejudice'?</div>
             <div class="user-answer">Your answer: Not answerd</div>
-            <div class="correct-answer">Correct answer: correct</div>
+            <div class="correct-answer">Correct answer: correct answer</div>
         </div>
 
         <div class="question-container">
