--- a/temperature-converter/index.html
+++ b/temperature-converter/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Free Online Temperature Converter Tool - Convert Celsius, Fahrenheit, Kelvin easily." />
-  <title>Temperature Converter Tool</title>
+  <meta name="description" content="Professional industrial-grade temperature conversion with advanced visualization" />
+  <title>ThermoVisor - Industrial Temperature Converter</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div id="particle-container"></div>
   <div class="container">
     <h1>Temperature Converter</h1>
     
@@ -24,7 +25,7 @@
 
     <button onclick="convert()">Convert</button>
 
-    <h2 id="result"></h2>
+    <div id="result" class="result-box"></div>
   </div>
 
   <script src="script.js"></script>
