--- a/bolt_cv/index.html
+++ b/bolt_cv/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/animations.css">
   <link rel="stylesheet" href="css/components.css">
   <link rel="stylesheet" href="css/responsive.css">
+  <link rel="stylesheet" href="css/print.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -146,7 +147,7 @@
                 <p>Senior Product Designer</p>
               </div>
               <div class="summary">
-                <h4>Professional Summary</h4>
+                <h4>About me</h4>
                 <p>Product designer with 5+ years of experience creating user-centered designs for SaaS products. Proven track record of increasing user engagement by 35% through intuitive interface design.</p>
               </div>
               <div class="experience">
