--- a/bolt_cv/index.html
+++ b/bolt_cv/index.html
@@ -598,7 +598,7 @@
                   <p id="preview-job-title">Your Job Title</p>
                 </div>
                 <div class="summary-section">
-                  <h4>Professional Summary</h4>
+                  <h4>About Me</h4>
                   <p id="preview-summary">Your professional summary will appear here after AI analysis.</p>
                 </div>
                 <div class="experience-section">
@@ -688,5 +688,12 @@
   <script src="js/animation.js"></script>
   <script src="js/cv-builder.js"></script>
   <script src="js/ai-integration.js"></script>
+  <div id="test-pdf-content" style="padding: 20px; border: 1px solid black;">
+    <h2>Test PDF Content</h2>
+    <p>This is a simple test to see if PDF generation is working.</p>
+  </div>
+
+  <button id="download-test-pdf" style="margin-top: 20px; padding: 10px;">Download Test PDF</button>
+
 </body>
 </html>
