added new option

--- a/Blogger/prompt_gen/ver03.html
+++ b/Blogger/prompt_gen/ver03.html
@@ -4,7 +4,7 @@
   <meta name="google-site-verification" content="gN77n9nbADnVfhWDHI5QVqmvZl4FzeGrE9i19hL38Dk" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Craft Your Perfect AI Prompt with Jen-Prompt</title>
+  <title>Jen-Prompt: Free, Unlimited AI Prompt Builder - No Login Required</title>
   <meta name="description" content="Turn simple ideas into powerful AI prompts with Jen-Prompt. Perfect for ChatGPT, Cloud, Midjourney & more. Fast, smart, and easy free prompt builder.">
 
   <style>
@@ -671,6 +671,7 @@
             <option value="marketing">Marketing & Content</option>
             <option value="code">Code Generation</option>
             <option value="website">Web Develop</option>
+            <option value="apps">App Develop</option>
             <option value="imagegenerate">Image Generation</option>
             <option value="videogenerate">Video Generation</option>
             <option value="storyvideo">Story Video</option>
@@ -914,10 +915,11 @@
     educational: "structured for educational content and learning",
     marketing: "optimized for marketing and persuasive content",
     code: "specialized for code generation and programming tasks",
-    imagegenerate: "specialized for high-quality image generation, including detailed scene descriptions and contextual explanations for various scenarios",
+    imagegenerate: "Specialized for high-quality AI image generation, capable of producing detailed scene compositions with precise visual elements, rich contextual backgrounds, accurate lighting, perspective guidance, character placement, and scenario-based 						storytelling. Supports styles like realistic, hiper realistic vector, isometric, 3D, and concept art for both web and mobile use cases.",
     videogenerate: "optimized for generating detailed video production prompts, encompassing comprehensive script outlines, precise scene breakdowns, camera angles, lighting, and desired visual aesthetics for AI video models",
     storyvideo: "designed to craft dynamic video generation prompts, guiding the AI to produce engaging visual narratives with specific actions, character interactions, environmental details, and desired cinematic styles",
-    website: "designed to craft comprehensive website generation prompts, including detailed page layouts, content requirements, interactive elements, and user journey mapping"
+    website: "Designed to craft advanced comprehensive  website generation prompts, including detailed multi-page layouts, responsive design specifications (desktop/tablet/mobile), SEO-friendly content structure, interactive components (forms, sliders, 				  animations), accessibility guidelines, performance requirements, and complete user journey mapping from landing to conversion.",
+    apps: " designed to generate detailed mobile app development prompts, including multi-screen UI layouts, platform-specific components (iOS/Android), content structure, navigation flow, onboarding steps, feature modules (e.g. chat, payment, profile), 				interactive elements (buttons, gestures, inputs), and complete user journey mapping from install to core engagement."
   };
 
   // Tone descriptions for the slider
@@ -1272,8 +1274,4 @@ if (readMorePromptEngineeringBtn && fullPromptEngineeringArticleContent) {
   });
 </script>
 </body>
-<<<<<<< HEAD
 </html>
-=======
-</html>
->>>>>>> a6c501c473b9c2ded58607f7d7bf2b818a1a647f
