--- a/Blogger/tools/animationgenerator.html
+++ b/Blogger/tools/animationgenerator.html
@@ -536,8 +536,95 @@
     .notification.show {
       transform: translateX(0);
     }
+	/* Footer */
+    footer {
+      background: var(--surface);
+      color: var(--text-secondary);
+      padding: 3rem 0;
+      border-top: 1px solid var(--border);
+      font-size: 0.9rem;
+    }
+
+    .footer-content {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 2rem;
+      margin-bottom: 2rem;
+    }
+
+    .footer-section h3 {
+      color: var(--text-primary);
+      margin-bottom: 1rem;
+      font-size: 1.1rem;
+    }
+
+    .footer-section p, .footer-section ul {
+      margin-bottom: 1rem;
+    }
+
+    .footer-section ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .footer-section ul li a {
+      color: var(--text-secondary);
+      text-decoration: none;
+      transition: color 0.3s ease;
+      padding: 0.2rem 0;
+      display: inline-block;
+    }
+
+    .footer-section ul li a:hover {
+      color: var(--primary);
+    }
+
+    .social-icons {
+      display: flex;
+      gap: 1rem;
+    }
+
+    .social-icons img {
+      width: 24px;
+      height: 24px;
+      transition: transform 0.3s ease;
+    }
+
+    .social-icons img:hover {
+      transform: translateY(-3px);
+    }
+
+    .footer-bottom {
+      text-align: center;
+      padding-top: 1.5rem;
+      border-top: 1px dashed var(--border);
+      color: var(--text-secondary);
+    }
+
+    .footer-bottom p {
+      margin: 0.5rem 0;
+    }
+
+    @media (max-width: 768px) {
+      .footer-content {
+        grid-template-columns: 1fr;
+        text-align: center;
+      }
+      .footer-section.social {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      .social-icons {
+        justify-content: center;
+      }
+    }
   </style>
 </head>
+
+  <script>
+    document.getElementById('currentYear').textContent = new Date().getFullYear();
+  </script>
 <body>
   <header>
     <div class="container">
@@ -1064,5 +1151,47 @@ animatedElement.addEventListener('animationiteration', () => {
     document.getElementById('fillMode').addEventListener('change', generateAnimation);
 
   </script>
+  <footer>
+    <div class="container">
+      <div class="footer-content">
+        <div class="footer-section about">
+          <h3>AnimateCSS Pro</h3>
+          <p>Generate professional CSS animations with live preview. Create stunning web animations effortlessly.</p>
+          <p>Our mission is to empower developers and designers with easy-to-use tools for modern web development.</p>
+        </div>
+        <div class="footer-section links">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="#generator">Animation Generator</a></li>
+            <li><a href="#examples">Examples</a></li>
+            <li><a href="#docs">Documentation</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer-section legal">
+          <h3>Legal</h3>
+          <ul>
+            <li><a href="/privacy-policy.html">Privacy Policy</a></li>
+            <li><a href="/terms-of-service.html">Terms of Service</a></li>
+            <li><a href="/cookie-policy.html">Cookie Policy</a></li>
+            <li><a href="/disclaimer.html">Disclaimer</a></li>
+          </ul>
+        </div>
+        <div class="footer-section social">
+          <h3>Follow Us</h3>
+          <div class="social-icons">
+            <a href="https://github.com/AnimateCSSPro" target="_blank" aria-label="GitHub"><img src="github-icon.png" alt="GitHub"></a>
+            <a href="https://twitter.com/AnimateCSSPro" target="_blank" aria-label="Twitter"><img src="twitter-icon.png" alt="Twitter"></a>
+            <a href="https://linkedin.com/company/animatecsspro" target="_blank" aria-label="LinkedIn"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; <span id="currentYear"></span> AnimateCSS Pro. All rights reserved.</p>
+        <p>Made with ❤️ for the web development community.</p>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
